added analytics number of members code
