# services/analytics-service/internal/infrastructure/grpc/grpc_handler.go
@@ -71,3 +71,79 @@ func (h *gRPCHandler) GetTripsToday(
 		Count: count,
 	}, nil
 }
+
+// GetTotalMembers
+func (h *gRPCHandler) GetTotalMembers(
+	ctx context.Context,
+	_ *emptypb.Empty,
+) (*pb.TotalMembersResponse, error) {
+
+	h.log.Infow("GetTotalMembers gRPC request received")
+
+	count, err := h.service.GetTotalMembers(ctx)
+	if err != nil {
+		h.log.Errorw("GetTotalMembers failed", "err", err)
+		return nil, err
+	}
+
+	h.log.Infow("GetTotalMembers completed successfully", "count", count)
+
+	return &pb.TotalMembersResponse{
+		Count: count,
+	}, nil
+}
+
+// GetActiveUsersToday
+func (h *gRPCHandler) GetActiveUsersToday(
+	ctx context.Context,
+	_ *emptypb.Empty,
+) (*pb.ActiveUsersTodayResponse, error) {
+
+	h.log.Infow("GetActiveUsersToday gRPC request received")
+
+	count, err := h.service.GetActiveUsersToday(ctx)
+	if err != nil {
+		h.log.Errorw("GetActiveUsersToday failed", "err", err)
+		return nil, err
+	}
+
+	h.log.Infow("GetActiveUsersToday completed successfully", "count", count)
+
+	return &pb.ActiveUsersTodayResponse{
+		Count: count,
+	}, nil
+}
+
+func (h *gRPCHandler) GetRecentActivity(
+	ctx context.Context,
+	_ *emptypb.Empty,
+) (*pb.RecentActivityResponse, error) {
+
+	h.log.Infow("GetRecentActivity gRPC request received")
+
+	events, err := h.service.GetRecentActivity(ctx)
+	if err != nil {
+		h.log.Errorw("GetRecentActivity failed", "err", err)
+		return nil, err
+	}
+
+	pbEvents := make([]*pb.Event, len(events))
+
+	for i, e := range events {
+		pbEvents[i] = &pb.Event{
+			EventType: e.EventType,
+			UserId:    e.UserID,
+			OrgId:     e.OrgID,
+			Service:   e.Service,
+			EventTime: e.EventTime,
+		}
+	}
+
+	h.log.Infow("GetRecentActivity completed successfully",
+		"events_count", len(pbEvents),
+	)
+
+	return &pb.RecentActivityResponse{
+		Events: pbEvents,
+	}, nil
+}
